--- a/src/pages/report-home/report-home.html
+++ b/src/pages/report-home/report-home.html
@@ -30,7 +30,8 @@
         <ion-col >
           <ion-list>
             <ion-item *ngFor="let report of reportList" (tap)="selectReport(report)">
-              <ion-icon name="ios-folder-outline" item-left></ion-icon>
+              <!--<ion-icon name="ios-folder-outline" item-left></ion-icon>-->
+              <img   class="side-menu-icon" [src]="icon.reports"/>&nbsp;
               <span >{{ report.name }}</span>
             </ion-item>
             <ion-item *ngIf = "reportList.length == 0">
