--- a/src/pages/report-parameter-selection/report-parameter-selection.html
+++ b/src/pages/report-parameter-selection/report-parameter-selection.html
@@ -26,6 +26,7 @@
             </div>
           </div>
           <div *ngIf="currentSelectionStatus.isOrgUnitLoaded" style="text-align: center" >
+            <img  class="side-menu-icon" [src]="iconsReport.orgaUnit"/>&nbsp;
             {{ selectedOrganisationUnitLabel }}
           </div>
         </div>
@@ -41,6 +42,7 @@
             </div>
           </div>
           <div *ngIf="currentSelectionStatus.isPeriodLoaded" style="text-align: center" >
+            <img  class="side-menu-icon" [src]="iconsReport.periodtime"/>&nbsp;
             {{ selectedPeriodLabel }}
           </div>
         </div>
