add missing model, constants for dashboard module as well script for install andoid plugins and platform

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,10 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+  <!-- add leaflet css from copied assets -->
+  <link href="assets/leaflet.css" rel="stylesheet">
+  <link href="assets/styles.css" rel="stylesheet">
+
 </head>
 <body>
 
