add dashboard module

--- a/src/pages/dashboard-filter/dashboard-filter.html
+++ b/src/pages/dashboard-filter/dashboard-filter.html
@@ -14,7 +14,7 @@
 </ion-header>
 
 
-<ion-content class="dashboardSearch slide-in-from-right">
+<ion-content class="dashboardSearch">
 
   <ion-grid>
     <ion-searchbar animated="true"autocomplete="on" placeholder="Search dashboard by name"  (ionInput)="getFilteredList($event)"></ion-searchbar>
