--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -66,7 +66,7 @@
                   <ion-col>
                     <ion-item no-lines>
                       <ion-label> Auto sync</ion-label>
-                      <ion-toggle color="font-color" [(ngModel)] = "settingObject.synchronization.isAutoSync"></ion-toggle>
+                      <ion-toggle color="primary" [(ngModel)] = "settingObject.synchronization.isAutoSync"></ion-toggle>
                     </ion-item>
                   </ion-col>
                 </ion-row>
