--- a/src/pages/help/help.html
+++ b/src/pages/help/help.html
@@ -52,7 +52,7 @@
                 <div *ngIf="helpContent.subMenu && helpContent.subMenu.length > 0">
                   <ion-row >
                     <ion-col col-12>
-                      <page-help-contents [helpContents]="helpContent.subMenu"></page-help-contents>
+                      <help-contents [helpContents]="helpContent.subMenu"></help-contents>
                     </ion-col>
                   </ion-row>
                 </div>
