--- a/src/pages/organisation-unit-selection/organisation-unit-selection.html
+++ b/src/pages/organisation-unit-selection/organisation-unit-selection.html
@@ -23,13 +23,12 @@
 <ion-content padding>
 
   <div *ngIf="isLoading">
-
+    <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage "></page-loading>
   </div>
   <div *ngIf="!isLoading">
     <div *ngFor="let organisationUnit of organisationUnits">
       <organisation-unit-tree [organisationUnit]="organisationUnit"
                                     [currentSelectedOrgUnitName]="lastSelectedOrgUnit.name"
-                                    [hasOrgUnitChildrenLoaded]="hasOrgUnitChildrenLoaded"
                                     [hasOrgUnitChildrenOpened]="hasOrgUnitChildrenOpened"
                                     (selectedOrganisationUnit)="setSelectedOrganisationUnit($event)"
                                     [currentUser]="currentUser"></organisation-unit-tree>
