--- a/src/pages/data-set-selection/data-set-selection.html
+++ b/src/pages/data-set-selection/data-set-selection.html
@@ -19,6 +19,23 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content class = "data-entry-selection">
+  <ion-searchbar animated="true"autocomplete="on"  (ionInput)="getFilteredList($event)"></ion-searchbar>
+  <ion-grid>
+    <ion-row>
+      <ion-col >
+        <ion-list>
+          <ion-item *ngFor="let dataSet of dataSetsList"   (tap)="setSelectedDataSet(dataSet)">
+            <!--<ion-icon name="list" item-left></ion-icon>-->
+            <img  class="side-menu-icon" [src]="icon"/>&nbsp;&nbsp;
+            <span  ion-text [color]="(currentDataSet == dataSet.name) ?'current' : 'font-color'">{{ dataSet.name }}</span>
+          </ion-item>
+          <ion-item *ngIf = "dataSetsList.length == 0">
+            <empty-list-notification [emptyListMessage]="'There is no Data entry form to select'"></empty-list-notification>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
