--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -70,7 +70,7 @@
                     </ion-item>
                   </ion-col>
                 </ion-row>
-                <button  small  color="primary" ion-button full large text-capitalize (tap)="applySettings(settingContent)">
+                <button  color="primary" class="normalButton" ion-button full text-capitalize (tap)="applySettings(settingContent)">
                   Save
                 </button>
               </div>
@@ -98,7 +98,7 @@
                     </ion-item>
                   </ion-col>
                 </ion-row>
-                <button small color="primary" ion-button full large text-capitalize (tap)="applySettings(settingContent)">
+                <button color="primary" class="normalButton" ion-button full text-capitalize (tap)="applySettings(settingContent)">
                   Save
                 </button>
               </div>
