working on meta data download

--- a/src/pages/sync/sync.html
+++ b/src/pages/sync/sync.html
@@ -42,7 +42,7 @@
         </div>
 
         <div *ngIf="syncContent.id == 'downloadMetadata'" >
-
+          <download-meta-data></download-meta-data>
         </div>
 
         <div *ngIf="syncContent.id == 'downloadData'" >
