--- a/src/pages/data-dimension-selection/data-dimension-selection.html
+++ b/src/pages/data-dimension-selection/data-dimension-selection.html
@@ -5,7 +5,6 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-toolbar color="primary">
     <ion-title>
       {{ title }}
@@ -16,22 +15,22 @@
       </button>
     </ion-buttons>
   </ion-toolbar>
-
 </ion-header>
 
 
-<ion-content padding>
+<ion-content >
   <ion-searchbar animated="true"autocomplete="on"  (ionInput)="getFilteredList($event)"></ion-searchbar>
   <ion-grid>
     <ion-row>
       <ion-col >
         <ion-list>
-          <ion-item *ngFor="let categoryOption of category.categoryOptions" (tap)="setSelectedCategoryOption(categoryOption)">
+          <ion-item *ngFor="let categoryOption of categoryOptions" (tap)="setSelectedCategoryOption(categoryOption)">
             <img  class="side-menu-icon" [src]="icon"/>&nbsp;&nbsp;
             <span  ion-text [color]="(currentSelection.id == categoryOption.id) ?'current' : 'font-color'">{{ categoryOption.name }}</span>
           </ion-item>
-          <ion-item *ngIf = "category.categoryOptions.length == 0">
+          <ion-item *ngIf = "categoryOptions.length == 0">
             <empty-list-notification [emptyListMessage]="'There is no option to select'"></empty-list-notification>
+
           </ion-item>
         </ion-list>
       </ion-col>
