--- a/src/pages/data-entry/data-entry.html
+++ b/src/pages/data-entry/data-entry.html
@@ -32,27 +32,14 @@
           {{ periodLabel }}
         </div>
 
-        selectedDataDimension : {{ selectedDataDimension |json }}
-
-        <div *ngIf="selectedPeriod && selectedPeriod.iso && !isFormReady">
-          <div *ngFor="let category of dataSetCategoryCombo.categories;let categoryIndex = index" (tap)="openDataDimensionSelection(category,currentIndex)" class="item-card" color="font-color" full text-center text-wrap text-capitalize  >
-            {{ category.name }} :: {{ categoryIndex }}
-            <div *ngIf="selectedDataDimension[categoryIndex]">
-              {{ selectedDataDimension[categoryIndex] }}
+        <div *ngIf="selectedPeriod && selectedPeriod.iso && dataSetCategoryCombo && dataSetCategoryCombo.id ">
+          <div *ngFor="let category of dataSetCategoryCombo.categories;let categoryIndex = index">
+            <div (tap)="openDataDimensionSelection(category)" class="item-card" color="font-color" full text-center text-wrap  >
+              <div style="padding-bottom: 5px;"><b>{{ category.name }}</b></div>
+              <div *ngIf="selectedDataDimension[categoryIndex]">{{ selectedDataDimension[categoryIndex].name }}</div>
+              <div *ngIf="!selectedDataDimension[categoryIndex]">Touch to select option</div>
             </div>
           </div>
-
-          <div *ngFor="let category of selectedDataSet.categoryCombo.categories;let categoryIndex = index ">
-            <ion-item >
-              <ion-label>{{ category.name }}</ion-label>
-              <ion-select [(ngModel)]="selectedDataDimension[categoryIndex]">
-                <ion-option *ngFor="let option of category.categoryOptions" value="{{option.id}}" >
-                  {{ option.name }}
-                </ion-option>
-              </ion-select>
-            </ion-item><br>
-          </div>
-
         </div>
 
         <div *ngIf="isFormReady" class="item-card" full >
