fixing loading indicators

--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -27,9 +27,9 @@
           <page-loading [loadingMessage]="loadingMessage" [loadingSize]="'large'" ></page-loading>
         </div>
         <div *ngIf="!isLoading">
-          indicatorIds :: {{ indicatorIds |json }}<br>
-          dataSet :: {{ dataSet |json }}<br>
-          sectionIds :: {{ sectionIds |json }}<br>
+          sectionIds :: {{ sectionIds |json }}<br><br>
+          indicatorIds :: {{ indicators |json }}<br><br>
+          dataSet :: {{ dataSet |json }}<br><br>
         </div>
 
 
