working on meta data download and Clear local Data

--- a/src/pages/sync/sync.html
+++ b/src/pages/sync/sync.html
@@ -34,7 +34,7 @@
       <div *ngIf="(isSyncContentOpen[syncContent.id])" >
         <hr>
         <div *ngIf="syncContent.id == 'dataViaSms'" >
-          dataViaSms
+          <upload-data-via-sms></upload-data-via-sms>
         </div>
 
         <div *ngIf="syncContent.id == 'dataViaInternet'" >
