getting list of sections if data set has section or list of data elements for default or custom data set

--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -27,9 +27,10 @@
           <page-loading [loadingMessage]="loadingMessage" [loadingSize]="'large'" ></page-loading>
         </div>
         <div *ngIf="!isLoading">
-          sectionIds :: {{ sectionIds |json }}<br><br>
-          indicatorIds :: {{ indicators |json }}<br><br>
-          dataSet :: {{ dataSet |json }}<br><br>
+          entryForm :: {{ entryForm |json }}<br><br><br>
+          sectionIds :: {{ sectionIds |json }}<br><br><br>
+          indicatorIds :: {{ indicators |json }}<br><br><br>
+          dataSet :: {{ dataSet |json }}<br><br><br>
         </div>
 
 
