fixing saving default sync time as well as get dataelements as sections

--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -17,7 +17,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <div *ngIf="entryFormParameter" class="item-card" full (tap)="navCtrl.pop()">
+        <div *ngIf="entryFormParameter" class="item-card" full (tap)="goBack()">
           <div><b>Organisation Unit</b> : {{ entryFormParameter.orgUnit.name }}<br>
             <b>Form</b> : {{ entryFormParameter.dataSet.name }}<br>
             <b>Period</b> : {{ entryFormParameter.period.name }}
