--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -43,9 +43,49 @@
           </div>
           <div *ngFor="let section of entryFormSections;let currentSectionIndex = index">
             <div *ngIf="(currentSectionIndex + 1) == pager.page">
-              {{ section.dataElements |json  }}
+              <div class="item-card" padding-bottom padding-top>
+                {{ section.dataElements |json  }}
+              </div>
+
             </div>
           </div>
+
+          <div class="item-card">
+            <ion-row *ngIf="entryFormSections.length > 1" >
+              <ion-col col-2 col-sm-1 (click)="changePagination(pager.page - 1)" padding-bottom padding-top>
+                <ion-icon name="ios-arrow-back-outline" ></ion-icon>
+              </ion-col>
+              <ion-col  col-3 col-sm-2 padding-bottom padding-top>
+                <div >
+                  {{ pager.page + ' of ' + pager.total }}
+                </div>
+              </ion-col>
+              <ion-col  col-2 col-sm-1 (click)="changePagination(pager.page  + 1)" padding-bottom padding-top>
+                <ion-icon name="ios-arrow-forward-outline" ></ion-icon>
+              </ion-col>
+              <ion-col  col-5 col-sm-8 *ngIf="!isDataSetCompleted">
+                <button color="favorite" round ion-button full [disabled] ="isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+                  Complete
+                </button>
+              </ion-col>
+              <ion-col  col-5 col-sm-8 *ngIf="isDataSetCompleted">
+                <button  color="danger" round ion-button full [disabled] = "isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+                  Undo Complete
+                </button>
+              </ion-col>
+            </ion-row>
+
+
+            <ion-row *ngIf="entryFormSections.length == 1">
+              <ion-col  col-6 col-sm-6>
+
+              </ion-col>
+              <ion-col  col-6 col-sm-6>
+
+              </ion-col>
+            </ion-row>
+          </div>
+
         </div>
 
 
