meta data download and Clear local Data & MetaData Done

--- a/src/pages/sync/sync.html
+++ b/src/pages/sync/sync.html
@@ -54,7 +54,7 @@
         </div>
 
         <div *ngIf="syncContent.id == 'clearMetadata'" >
-          clearMetadata
+          <clear-local-metadata></clear-local-metadata>
         </div>
 
       </div>
