meta data download and Clear local Data & MetaData Done

--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -34,6 +34,7 @@
         </div>
       </ion-col>
       <ion-col col-4 (tap)="goToView('ReportsPage')"  >
+      <!--<ion-col col-4 (tap)="goToView('ReportPage')"  >-->
         <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/app-icons/reports.png">
