--- a/src/pages/sync/sync.html
+++ b/src/pages/sync/sync.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content >
+<ion-content class="whiteBackground">
 
   <ion-grid>
     <div class="item-card" *ngFor="let syncContent of syncContents">
