meta data download and Clear local Data & MetaData Done 1

--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -7,24 +7,33 @@
 <ion-header>
 
   <ion-navbar color="primary">
+
     <ion-title>Apps</ion-title>
+
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content >
+<ion-content class="whiteBackground">
 
   <ion-grid>
     <ion-row >
-      <ion-col col-4 (tap)="goToView('DataEntryPage')" >
+
+      <ion-col col-4 (tap)="goToView('DataEntryPage')">
+
         <div class="apps-contents" padding>
+
+
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/app-icons/data-entry.png">
           </ion-thumbnail>
           <p class="menu-app" >Data Entry</p>
+
         </div>
+
       </ion-col>
+
       <ion-col col-4 (tap)="goToView('EventCapturePage')" >
         <div class="apps-contents" padding>
           <ion-thumbnail >
@@ -33,6 +42,7 @@
           <p class="menu-app" >Event Capture</p>
         </div>
       </ion-col>
+
       <ion-col col-4 (tap)="goToView('ReportsPage')"  >
       <!--<ion-col col-4 (tap)="goToView('ReportPage')"  >-->
         <div class="apps-contents" padding>
@@ -42,7 +52,9 @@
           <p class="menu-app">Reports</p>
         </div>
       </ion-col>
+
     </ion-row>
+
     <ion-row>
       <ion-col col-4 (tap)="goToView('DashboardPage')" >
         <div class="apps-contents" padding>
