--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -14,5 +14,19 @@
 
 
 <ion-content >
+  <ion-grid>
+    <ion-row>
+      <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()" >
+        <!--<img  class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;-->
+        {{ organisationUnitLabel }}
+      </div>
+
+      <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openEntryFormList()" >
+        <!--<img  class="side-menu-icon" [src]="icons.dataSet"/>&nbsp;&nbsp;-->
+        {{ programLabel }}
+      </div>
+
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
