Update download data in sync

--- a/src/pages/sync/sync.html
+++ b/src/pages/sync/sync.html
@@ -46,7 +46,7 @@
         </div>
 
         <div *ngIf="syncContent.id == 'downloadData'" >
-
+          <download-data></download-data>
         </div>
 
         <div *ngIf="syncContent.id == 'clearData'" >
