--- a/src/pages/program-selection/program-selection.html
+++ b/src/pages/program-selection/program-selection.html
@@ -13,13 +13,13 @@
   <ion-content class = "programFormSelection">
 
   <ion-searchbar animated="true"  (ionInput)="getFilteredList($event)"></ion-searchbar>
-  <ion-grid>
+  <ion-grid >
     <ion-row>
       <ion-col >
         <ion-list>
           <ion-item *ngFor="let program of programsList"   (tap)="setSelectedProgram(program)">
             <ion-icon name="list" item-left></ion-icon>
-            <span (tap)="setSelectedProgram(program)" ion-text [color]="(currentSelectedProgram == program.name)? 'current': 'font-color'" >{{ program.name}}</span>
+            <span (tap)="setSelectedProgram(program)" ion-text [color]="(currentSelectedProgram == program)? 'current': 'font-color'" >{{ program}}</span>
           </ion-item>
           <ion-item *ngIf = "programsList.length == 0">
             <empty-list-notification [emptyListMessage]="'There is no Program to select'"></empty-list-notification>
