--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -21,9 +21,14 @@
         {{ organisationUnitLabel }}
       </div>
 
-      <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openEntryFormList()" >
+      <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openProgramList()" >
         <!--<img  class="side-menu-icon" [src]="icons.dataSet"/>&nbsp;&nbsp;-->
         {{ programLabel }}
+      </div>
+
+      <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openPeriodList()" >
+        <!--<img  class="side-menu-icon" [src]="icons.dataSet"/>&nbsp;&nbsp;-->
+        {{ periodLabel }}
       </div>
 
     </ion-row>
